# knowledge_net

./: .buildinfo  .gitignore  LICENSE  README.rst  api.html  build_database.py  calling.html  chat_history.html  genindex.html  http_server.py  http_server_rag.py  http_server_with_config.py  instantiation.html  local_and_remote.html  overview.html  pyproject.toml  requirements.txt  search.html  searchindex.js  serving.html  streamlit_ui.py  streamlit_ui_single.py  streamlit_ui_with_config.py  tests.py  tutorial.html  tutorial_2.html  tutorial_2b.html  tutorial_3.html
.github/workflows/: static.yml
_sources/: api.rst.txt  serving.rst.txt  tutorial_1.rst.txt  tutorial_2.rst.txt  tutorial_4.rst.txt
docs/source/: api.rst  calling.rst  chat_history.rst  classes.rst  conf.py  index.rst  instantiation.rst  knowledgebase.rst  local_and_remote.rst  overview.rst  protocols.rst  serving.rst  tutorial.rst  tutorial_1.rst  tutorial_2.rst  tutorial_2b.rst  tutorial_3.rst  tutorial_3b.rst  tutorial_4.rst
examples/documents/babbage/: 57532-0.txt  pg1216.txt  pg4238.txt  (+1 more)
examples/meta/: victorian-science-sources.json  victorian_science_sources.json
knowledge_net/chat/: chat_event.py  chat_history.py  chat_model.py
knowledge_net/comm_shell/: comm_shell.py  comm_shell_http.py  comm_shell_mock.py
knowledge_net/knowledge_base/: knowledge_base.py
knowledge_net/knowledgebase/: knowledgebase.py
knowledge_net/langchain/: chat_model.py  conversions.py  deep_infra_chat.py  deep_infra_mixtral.py  document_group_transform.py  rag_chain.py  rag_knowledgebase.py  rag_prompts.py
(+42 files in other folders)
